--- a/Kadai_005/html/kadai_005.html
+++ b/Kadai_005/html/kadai_005.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="このページは5章の課題です。">
   <title>私の趣味</title>
 </head>
 <body>
